# hpp-rbprm-robot-data

./: .gitlab-ci.yml  CMakeLists.txt  README.md
data/hrp2/: package.xml
data/hrp2/raw_com_data/: LA_com.erom  LL_com.erom  RA_com.erom  RL_com.erom
data/hrp2/urdf/: hrp2_larm_rom.urdf  hrp2_lleg_rom.urdf  hrp2_rarm_rom.urdf  hrp2_rleg_rom.urdf  hrp2_rom.urdf  hrp2_trunk.urdf  hrp2_trunk08.urdf  hrp2_trunk_flexible.urdf
data/hyq/: package.xml
data/hyq/com_inequalities/: lfleg_com.ineq  obj_to_constraints.py  rfleg_com.ineq
data/hyq/meshes/: hyq_visual.dae
data/hyq/urdf/: hyq_lfleg_rom.urdf  hyq_lhleg_rom.urdf  hyq_rfleg_rom.urdf  hyq_rhleg_rom.urdf  hyq_rom.urdf  hyq_trunk.urdf  hyq_trunk_large.urdf  hyq_trunk_large_realist.urdf
data/hyq_description/cmake/: hyq_descriptionConfig.cmake
data/hyq_description/urdf/: hyq_6D.urdf  hyq_NEW.urdf  hyq_no_fixed.urdf
data/simpleHumanoid/: package.xml
data/simpleHumanoid/meshes/: robot_trunk_view.dae
data/simpleHumanoid/srdf/: simpleHumanoid_lleg_rom.srdf  simpleHumanoid_rleg_rom.srdf  simpleHumanoid_trunk.srdf
data/simpleHumanoid/urdf/: simpleHumanoid_trunk.urdf
data/spiderman/com_inequalities/: LA_com.ineq  LL_com.ineq  RA_com.ineq  RL_com.ineq
data/spiderman/raw_com_data/: LFoot_com.erom  LHand_com.erom  RFoot_com.erom  RHand_com.erom
data/talos/meshes/: talos_larm_rom.stl  talos_lleg_rom.stl  talos_rarm_rom.stl  talos_rleg_rom.stl  talos_trunk.stl  talos_trunk_lower_visual.dae
data/talos/roms/: larm.mtl
data/talos/urdf/: talos_larm_rom.urdf  talos_lleg_rom.urdf  talos_rarm_rom.urdf  talos_rleg_rom.urdf  talos_trunk.urdf
script/: anymal_data.py  hrp2_data.py  hyq_data.py  runs.sh
script/com_constraints/: admissibleComPositionsFromEffectorHyQ.py  admissibleComPositionsFromEffectorPyrene.py  admissibleComPositionsFromEffectorSpidey.py
src/: CMakeLists.txt
src/hpp/corbaserver/rbprm/hyq/: robot.py
src/hpp/corbaserver/rbprm/hyq_abstract/: robot.py
src/hpp/corbaserver/rbprm/hyq_contact6D/: robot.py
src/hpp/corbaserver/rbprm/simpleHumanoid_abstract/: robot.py
