<package>
  <name>simpleHumanoid-rbprm</name>
  <version>0.1.0</version>
  <description>
    Info Database for using rbprm with SimpleHumanoid.
  </description>
  <author>Steve Tonneau</author>
  <maintainer email="hpp@laas.fr">Pierre Fernbach</maintainer>
  <license>LGPL v2</license>
  <build_depend>hpp-rbprm</build_depend>
</package>
